--- a/package.json
+++ b/package.json
@@ -1,12 +1,37 @@
 {
+  "name": "snowpack-template-tailwind",
+  "version": "0.7.1",
+  "author": "Jonathan Alvarez",
+  "description": "Snowpack CSA Template for tailwind, prettier and autopublish on GH pages",
+  "repository": "github:jonalvarezz/snowpack-template-tailwind",
+  "homepage": "https://CarolinaDCode.github.io/snowpack-template-tailwind",
+  "keywords": [
+    "snowpack",
+    "csa-template"
+  ],
+  "license": "MIT",
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
     "format": "prettier --write \"src/**/*.js\"",
-    "install:husky": "husky install",
     "lint": "prettier --check \"src/**/*.js\"",
-    "pre-commit": "pretty-quick --staged"
+    "pre-commit": "pretty-quick --staged",
+    "install:husky": "husky install"
   },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true
+  },
+  "files": [
+    ".gitignore",
+    ".github/workflows/publish.yml",
+    "public",
+    "src",
+    "snowpack.config.js",
+    "yarn.lock"
+  ],
   "devDependencies": {
     "husky": "6",
     "prettier": "^2.0.5",
